0.9.0/guides/enkeyclasses/README.md
# List of key classes

Read next classes' documentation to improve your jWidget knowledge.

Core:

- JW.Class
- JW.Event

Property and its helpers:

- JW.Property
- JW.Copier
- JW.Functor
- JW.Mapper
- JW.Updater
- JW.Switcher
- JW.UI.TextUpdater
- JW.UI.HtmlUpdater
- JW.UI.ValueUpdater
- JW.UI.AttrUpdater
- JW.UI.PropUpdater
- JW.UI.CssUpdater
- JW.UI.ClassUpdater
- JW.UI.VisibleUpdater
- JW.UI.RadioUpdater
- JW.UI.ValueListener
- JW.UI.CheckedListener
- JW.UI.RadioListener

Collections:

- JW.AbstractCollection
- JW.IndexedCollection
- JW.AbstractArray
- JW.AbstractMap
- JW.AbstractSet

Synchronizers:

- Item mapper: JW.AbstractCollection.Mapper
- Filterer: JW.AbstractCollection.Filterer
- Converter to set: JW.AbstractCollection.Lister
- Converter to map (indexer): JW.AbstractCollection.Indexer
- Converter to array (orderer): JW.AbstractCollection.Orderer
- Converter to array (sorter by comparer): JW.AbstractCollection.SorterComparing
- Observer: JW.AbstractCollection.Observer
- View synchronizers: JW.AbstractArray.Inserter, JW.AbstractMap.Inserter
- Arrays merger: JW.AbstractArray.Merger
- Array reverser: JW.AbstractArray.Reverser

UI component:

- JW.UI.Component
